--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,3 @@
-# Ruby CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-ruby/ for more details
-#
 version: 2
 jobs:
   rubocop:
@@ -18,22 +14,21 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "Gemfile.lock" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+        keys:
+          - v1-gem-cache-{{ checksum "Gemfile.lock" }}
+          - v1-gem-cache-
       - run: gem install bundler
       - run: bundle install --jobs=4 --retry=3 --path vendor/bundle
       - run: yarn install
-      - save_cache:
-          paths:
-            - ./vendor/bundle
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-      # Rubocop
-      - run:
-          name: Rubocop
-          command: bundle exec rubocop -a
 
+      - save_cache:
+        key: v1-gem-cache-{{ checksum "Gemfile.lock" }}
+        paths:
+          - ./vendor/bundle
+      - run:
+        name: Rubocop
+        command: bundle exec rubocop -a
+  
   rspec:
     docker:
       - image: circleci/ruby:2.6.3-node-browsers-legacy
@@ -48,29 +43,28 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "Gemfile.lock" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+        keys:
+          - v1-gem-cache-{{ checksum "Gemfile.lock" }}
+          - v1-gem-cache-
       - run: gem install bundler
       - run: bundle install --jobs=4 --retry=3 --path vendor/bundle
       - run: yarn install
       - save_cache:
-          paths:
-            - ./vendor/bundle
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-      - run: bundle exec rake db:create
-      - run: bundle exec rake db:schema:load
-      # Rspec
+        key: v1-gem-cache-{{ checksum "Gemfile.lock" }}
+        paths:
+          - ./vendor/bundle
+      - run: rails db:create
       - run:
-          name: Rspec
-          command: bundle exec rspec
+        name: Rspec
+        command: bundle exec rspec
 
 workflows:
   version: 2
-  rubocop_rspec:
+  rubocop_and_rspec:
     jobs:
       - rubocop
       - rspec:
-          requires:
-            - rubocop
+        requires:
+          - rubocop
+
+
