--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "turbolinks": "^5.2.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuetify": "^2.1.13"
   },
   "version": "0.1.0",
   "devDependencies": {
