--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,13 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: root
-    ports:
+    ports: 
       - "3306:3306"
 
   web:
     build: .
-    command: bash ./bash/environment.bash
+    command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
       - .:/todoApp
     ports:
       - "3000:3000"
-      - "3035:3035"
-    depends_on:
-      - db
