api実装 & Vueの処理少し書いた..

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,10 @@ services:
     build: .
     command: bash ./bash/environment.bash
     volumes:
-      - .:/todoApp
+      - .:/todoApp:cached
+      - /todoApp/tmp
+      - /todoApp/log
+      - /todoApp/vender
     ports:
       - "3000:3000"
       - "3035:3035"
