--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue-loader": "^15.7.2",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10",
-    "vuetify": "^2.1.13"
+    "vuetify": "^2.1.13",
+    "vuex": "^3.1.2"
   },
   "version": "0.1.0",
   "devDependencies": {
