--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Build and test with Rake
         run: |
+          apt-get install libmysqlclient-dev
           gem install bundler
           bundle install --jobs 4 --retry 3
           bundle exec rake
