--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -8,7 +8,10 @@ jobs:
 
     services:
       mysql:
-        image: mysql
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: root
         ports:
           - 3306
 
