--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -32,5 +32,5 @@ jobs:
           sudo apt-get install libmysqlclient-dev
           gem install bundler
           bundle install --jobs 4 --retry 3
-          bundle exec rake
+          bundle exec rails
           echo '成功！！！！'
