--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Build and test with Rake
         run: |
           sudo apt-get install libmysqlclient-dev
+          yarn install
           gem install bundler
           bundle install --jobs 4 --retry 3
           bundle exec rails
