--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -35,6 +35,9 @@ jobs:
           bundle exec rails
           echo '成功！！！！'
 
+        - name: db create
+        run: bundle exec rails db:create
+
       - name: Run rubocop
         run: bundle exec rubocop
 
