--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -9,6 +9,7 @@ jobs:
     services:
       db:
         image: mysql:5.7
+        hostname: db
         env:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: root
