--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -35,6 +35,7 @@ jobs:
           bundle install --jobs 4 --retry 3
           bundle exec rails
           echo '成功！！！！'
+          cp config/database.yml.ci config/database.yml
 
       - name: db create
         run: bundle exec rails db:create
