--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -54,4 +54,6 @@ jobs:
         run: bundle exec rubocop
 
       - name: Run rspec
-        run: bundle exec rspec
+        run: |
+        bundle exec db:create
+        bundle exec rspec
