EC2にssh接続できるように修正

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -58,3 +58,16 @@ jobs:
 
       - name: Run rspec
         run: bundle exec rspec
+
+      - name: Set up ssh
+        run: |
+          mkdir -p /.ssh
+          cd .ssh
+          echo ${{secrets.SSH_SECRET_KEY}} >> ci_rsa_key
+
+      - name: Deploy
+        run:
+          cd .ssh &&
+          ssh -i ci_rsa_key ${{secrets.USER_NAME}}@${{HOST_NAME}} &&
+          cd ${{secrets.APP_DIR_PATH}} &&
+          #git pull
