--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,8 @@ jobs:
     steps:
       - name: Set up ssh
         run: |
-          sudo mkdir -p /.ssh
+          cd ~
+          sudo mkdir -p .ssh
           cd .ssh
           echo ${{secrets.SSH_SECRET_KEY}} >> ci_rsa_key
 
