--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Set up ssh
         run: |
-          cd /
+          bash cd /
           sudo mkdir -p .ssh 
           cd .ssh 
           echo ${{secrets.SSH_SECRET_KEY}} >> ci_rsa_key
