--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Set up ssh
         run: |
-          cd
+          ls
+          cd todoApp
           sudo mkdir -p .ssh 
           cd .ssh
           echo ${{secrets.SSH_SECRET_KEY}} >> ci_rsa_key
