--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,10 @@ jobs:
       - uses: actions/checkout@v1
       - name: Set up ssh
         run: |
-          ls
-          cd todoApp
+          cd
           sudo mkdir -p .ssh 
           cd .ssh
-          echo ${{secrets.SSH_SECRET_KEY}} >> ci_rsa_key
+          echo -e ${{secrets.SSH_SECRET_KEY}} >> ci_rsa_key
 
       - name: Deploy
         run:
