--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,8 @@ jobs:
           cd
           sudo mkdir -p .ssh 
           cd .ssh
-          echo ${{secrets.SSH_SECRET_KEY}} >> sudo ci_rsa_key
+          touch ci_rsa_key
+          echo ${{secrets.SSH_SECRET_KEY}} >> ci_rsa_key
 
       - name: Deploy
         run:
