--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,9 @@ jobs:
         run: |
           cd
           sudo mkdir -p .ssh 
-          cd .ssh
-          touch ci_rsa_key
-          echo ${{secrets.SSH_SECRET_KEY}} >> ci_rsa_key
+          sudo cd .ssh
+          sudo touch ci_rsa_key
+          sudo echo ${{secrets.SSH_SECRET_KEY}} >> ci_rsa_key
 
       - name: Deploy
         run:
