--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,6 @@ jobs:
       - name: Deploy
         run:
           cd
-          ssh -i ci_rsa_key ${{secrets.USER_NAME}}@${{secrets.HOST_NAME}} &&
-          cd /var && cd www && cd app && cd todoApp
+          ssh -i ci_rsa_key ${{secrets.USER_NAME}}@${{secrets.HOST_NAME}} 'cd /var && cd www && cd app && cd todoApp'
           #cd ${{secrets.APP_DIR_PATH}}
           #git pull
